# incentive_agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  CACHE_STRATEGY.md  CHANGELOG.md  CLAUDE.md  DIAGNOSTICS.md  Dockerfile.prod  PIPELINE_FLOW.md  PROMPTS_AND_PIPELINE.md  README.md  SETUP.md  TECHNICAL_ANALYSIS.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  run_backend.py
.github/workflows/: nightly-promote.yml
agents/: __init__.py  benefit_classifier.py  categorization.py  deep_verification.py  discovery.py  discovery_controller.py  extraction.py  gap_analyzer.py  landscape_mapper.py  population_discovery.py  verification.py
backend/api/: incentives.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
outputs/20260128_133957/: 01_discovery_raw.txt  action_plan_summary.csv  programs.csv
outputs/20260128_140645/: 01_discovery_raw.txt  action_plan_summary.csv  programs.csv
outputs/20260128_144606/: 01_discovery_raw.txt
outputs/20260128_145652/: 01_discovery_raw.txt  action_plan_summary.csv  programs.csv
outputs/aligned_20260129_130756/: 07_executive_summary.txt  illinois_incentive_database.xlsx  programs.csv
outputs/aligned_20260129_131508/: 07_executive_summary.txt  illinois_incentive_database.xlsx  programs.csv
outputs/aligned_20260129_131854/: 07_executive_summary.txt  illinois_incentive_database.xlsx  programs.csv
outputs/aligned_20260129_132112/: 07_executive_summary.txt  illinois_incentive_database.xlsx  programs.csv
outputs/aligned_20260129_161909/: 07_executive_summary.txt  programs.csv  (+1 more)
scripts/: maintenance_monitor.py  run_backend.py  run_pipeline.py  test_exa.py
src/: __init__.py
tests/: __init__.py  conftest.py
utils/: __init__.py  county_prioritizer.py  csv_exporter.py  database_builder.py  excel_parser.py  file_handler.py  golden_dataset.py  golden_dataset_loader.py  golden_tavily.py  program_matcher.py  retry_handler.py  semantic_deduplicator.py  sheets_exporter.py  tavily_client.py
(+76 files in other folders)
